# ryxpress

./: .gitignore  404.html  README.md  default.nix  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  ryxpress.ctx.yaml
.github/workflows/: build-website.yaml  pkgctx.yaml  run-tests.yml
docs/: index.md  reference.md
reference/: index.html
search/: search_index.json
site/: objects.inv
site/reference/: index.html
site/search/: search_index.json
src/ryxpress/: .#inspect_logs.py  __init__.py  copy_artifacts.py  garbage.py  init_proj.py  inspect_logs.py  plot_dag.py  plotting.py  r_runner.py  read_load.py  rxp_copy.py  rxp_gc.py  rxp_init.py  rxp_inspect.py  rxp_read_load.py  rxp_trace.py  tracing.py
tests/: default.nix  functions.py  gen-pipeline.R  pipeline.nix  test_hello.py  test_plotting_pipeline.py  test_r_runner.py
tests/_rixpress/: build_log_20250910_200632_wxarfnnzzd9vwvmik6nvq72y80pga2g8.json  build_log_20260124_184106_qcid580r0gk2dr9d13p1n0zq285zpcqp.json  build_log_20260124_184152_b2xdfsg8gk6c2kjpmvwzafkznpkd2mzq.json  build_log_20260124_185536_5xwvrip2vnlvr2r3jdr4ixgd1508qhcj.json  dag.json  default_libraries.R  default_libraries.py
