[project]
name = "ryxpress"
version = "0.1.0"
description = "Reproducible Analytical Pipelines with Nix"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "b-rodrigues" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
